#21 LoRA: programmatic --jfr, mode identity, and metrics extraction